--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -1,10 +1,15 @@
+.wrapper {
+    grid-template-columns: 1fr auto;
+}
+
 .main-sidebar {
-    height: 100%;
     padding: 1rem;
 
     min-width: 10rem;
 
-    display: grid;
+    display: flex;
+    flex-direction: column;
+
     gap: 1rem; 
     
     border-left: solid 1px var(--color);
@@ -14,17 +19,8 @@
     }
 }
 
-@media (min-width: 492px) {
-    .wrapper {
-        display: flex;
-    }
-    .main-content {
-        flex: 1;
-    }
-}
-
 @media (max-width: 492px) {
-    .wrapper {
+    .main-content {
         grid-template-columns: 1fr 0fr;
     }
     .main-sidebar {
