--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,8 +7,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
 ---
 <Layout title="Projects">
   <SiteGridContent>
+    <div class="divider h" style="--w: 1000;"></div>
     <h3>Misc Projects</h3>
-    <hr width="1000">
+    <div class="divider h" style="--w: 1000;"></div>
     <section class="grid projects">
       <div class="item">
         <a href="https://Timer.adarshrkumar.dev" target="_blank" class="image-link" />
@@ -77,9 +78,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div> -->
     </section>
-    <hr width="1000">
+    <div class="divider h" style="--w: 1000;"></div>
     <h3>Games</h3>
-    <hr width="1000">
+    <div class="divider h" style="--w: 1000;"></div>
     <section class="grid games">
       <div class="item">
         <a href="https://Uno.adarshrkumar.dev" target="_blank" class="image-link" />
