--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -56,7 +56,7 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <div class="item">
-        <a href="https://assstant.adarshrkumar.dev" target="_blank" class="image-link" />
+        <a href="https://assistant.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
           <a href="https://assistant.adarshrkumar.dev" target="_blank">
             <h3>Assistant</h3>
