--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,9 +7,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
 ---
 <Layout title="Projects">
   <SiteGridContent>
-    <div class="divider h" style="--s: 1000;"></div>
+    <div class="divider h" style="--s: 1000px;"></div>
     <h3>Misc Projects</h3>
-    <div class="divider h" style="--s: 1000;"></div>
+    <div class="divider h" style="--s: 1000px;"></div>
     <section class="grid projects">
       <div class="item">
         <a href="https://Timer.adarshrkumar.dev" target="_blank" class="image-link" />
@@ -78,9 +78,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div> -->
     </section>
-    <div class="divider h" style="--s: 1000;"></div>
+    <div class="divider h" style="--s: 1000px;"></div>
     <h3>Games</h3>
-    <div class="divider h" style="--s: 1000;"></div>
+    <div class="divider h" style="--s: 1000px;"></div>
     <section class="grid games">
       <div class="item">
         <a href="https://Uno.adarshrkumar.dev" target="_blank" class="image-link" />
