--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,7 +14,7 @@ $light-link-visited: #551A8B;
 
 $dark-bg: hsl(0, 0%, $main-color-lightness);
 $dark-color: hsl(0, 0%, $main-bg-lightness);
-$dark-nav-btn: hsl(0, 0%, calc(100% - $main-nav-lightness));
+$dark-nav-btn: hsl(0, 0%, calc(100% - ($main-nav-lightness)/2));
 
 $dark-link-color: #0000EE;
 $dark-link-visited: #551A8B;
