--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -24,7 +24,7 @@
     min-width: var(--min-width, fit-content);
   
     background-color: var(--nav-btn-bg);
-    color: var(--color);
+    color: var(--bg);
   
     border: none;
     border-radius: 100vw;
