--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -23,7 +23,7 @@
   
     min-width: var(--min-width, fit-content);
   
-    background-color: var(--nav-btn-bg);
+    background-color: var(--color);
     color: var(--bg);
   
     border: none;
