--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -18,7 +18,7 @@ $light-link-visited: #551A8B;
 $dark-bg: hsl(0, 0%, $main-color-lightness);
 $dark-color: hsl(0, 0%, $main-bg-lightness);
 
-$dark-nav-hover: lighen($dark-color, $change-amt);
+$dark-nav-hover: darken($dark-color, $change-amt);
 
 $dark-link-color: #0000EE;
 $dark-link-visited: #551A8B;
