--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -5,6 +5,7 @@ import Nav from './nav.astro'
 ---
 <aside class="main-sidebar">
     <section class="channel-stats"></section>
+    <div class="divider h no-margin"></div>
     <Nav direction="column" varient="sidebar" />
 </aside>
 <script src="https://apis.google.com/js/platform.js"></script>
