--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,7 @@ if (className.startsWith(' ')) className = className.substring(1)
   </head>
   <body>
     <NavScripts>
-      <Header logo={logoSRC} />
+      <Header siteDomain={sURL} logo={logoSRC} />
       <div class="wrapper">
         <main class="content" id="content">
           <h1 class="page-title">{pTitle}</h1>
