--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,7 +4,7 @@ import '../styles/components/header.scss'
 import Nav from '../components/nav.astro'
 import ThemeSwitcher from '../components/themeSwitcher.astro'
 
-var { siteDomain, logo } = Astro.props
+var { siteDomain, navItems, logo } = Astro.props
 
 var navItems = [
     { name: 'Home' }, 
