--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -37,6 +37,8 @@ items.forEach(function(item, i) {
     items[i] = item
 })
 
+console.log(items)
+
 ---
 <nav class="nav" data-direction={direction} data-varient={varient}>
     {
