--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -37,7 +37,7 @@ items.forEach(function(item, i) {
     items[i] = item
 })
 
-console.log(`<button url="${item[0].url}" class="nav-btn" onclick="goToUrl(this)">${item[0].name}</button>`)
+console.log(`<button url="${items[0].url}" class="nav-btn" onclick="goToUrl(this)">${items[0].name}</button>`)
 
 ---
 <nav class="nav" data-direction={direction} data-varient={varient}>
