--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -4,9 +4,9 @@ import '../styles/components/sidebar.scss'
 import Nav from './nav.astro'
 
 var navItems = [
-    { name: 'Home' }, 
+    // { name: 'Home' }, 
     { name: 'About' }, 
-    { name: 'Contact' }, 
+    // { name: 'Contact' }, 
     { name: 'Portfolio' }, 
     { name: 'Projects' }, 
     { name: 'Blog', url: 'https://blog.adarshrkumar.dev' }, 
