--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -10,7 +10,7 @@ var navItems = [
     { name: 'Portfolio' }, 
     { name: 'Projects' }, 
     { name: 'Blog', url: 'https://blog.adarshrkumar.dev' }, 
-    { name: 'Videos' }, 
+    // { name: 'Videos' }, 
 ]
 
 ---
