--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -41,6 +41,11 @@
     .form-field {
         & > * {
             display: block;
+            &:is(input, textarea) {
+                width: 100%;
+                aspect-ratio: 16 / 9;
+                border-radius: var(--pad);
+            }
         }
     }
 }
