--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -39,6 +39,7 @@
     }
 
     .form-field {
+        background-color: var(--bg);
         & > * {
             display: block;
             &:is(input, textarea) {
@@ -50,6 +51,9 @@
                 }
             }
         }
+    }
+    & :is([type="submit"], [type="button"], button) {
+        background-color: var(--bg);
     }
 }
 
