--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -39,6 +39,10 @@
     }
 
     .form-field {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
         & > * {
             display: block;
             &:is(
