--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -55,8 +55,8 @@
             }
 
             &:is(input, textarea) {
-                box-sizing: border-box;
-                padding: 5px 10px;
+                // box-sizing: border-box;
+                padding: var(--pad);
 
                 width: 100%;
                 aspect-ratio: 9 / 1;
