--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -58,7 +58,7 @@
                 // box-sizing: border-box;
                 padding: var(--pad);
 
-                width: calc(100% - var(--pad)*2);
+                // width: calc(100% - var(--pad)*2);
                 aspect-ratio: 9 / 1;
 
                 background-color: var(--bg);
