--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -56,7 +56,7 @@
 
             &:is(input, textarea) {
                 // box-sizing: border-box;
-                padding: var(--pad);
+                padding: calc(var(--pad)/2);
 
                 // width: calc(100% - var(--pad)*2);
                 aspect-ratio: 9 / 1;
