--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -63,7 +63,7 @@
         padding: calc(var(--pad)/2);
 
         // width: calc(100% - var(--pad)*2);
-        aspect-ratio: 9 / 1;
+        min-height: 50px;
 
         background-color: var(--bg);
         color: var(--color);
