--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -41,7 +41,7 @@
     .form-field {
         display: flex;
         flex-direction: column;
-        gap: 5px;
+        // gap: 5px;
 
         & > * {
             display: block;
