--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,20 +16,20 @@ var currentDate = {
   year: date.getFullYear(), 
 }
 
-let ans = ''
+let age = ''
 if (
   (currentDate.month < dob.month) || 
   (
     currentDate.month === dob.month && 
     currentDate.day <= 28
   )
-) ans = currentDate.year - dob.year - 1
-else ans = currentDate.year - dob.year
+) age = currentDate.year - dob.year - 1
+else age = currentDate.year - dob.year
 
 ---
 <Layout title="About">
   <div class="about">
-    <p>Hello, my name is Adarsh Kumar or RockGamerAK. I'm {ans} years old, and a High School Student.</p>
+    <p>Hello, my name is Adarsh Kumar. I'm {age} years old, and a High School Student.</p>
     <p>I am good with software, so if you need tech help, let me know! I also enjoy history and geography.</p>
   </div>
 </Layout>
