--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,9 +7,9 @@ import fs from 'fs'
 
 var posts = []
 
-const postFiles = fs.readdirSync(`${__dirname}/../posts`)
+const postFiles = fs.readdirSync(`../posts`)
 postFiles.forEach(function(p, i) {
-  var post = fs.readFileSync(`${__dirname}/../posts/${p}`)
+  var post = fs.readFileSync(`../posts/${p}`)
   posts.push(post)
 })
 ---
