--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,7 +7,7 @@ import fs from 'fs'
 
 import getPosts from '../getPosts.js'
 
-var posts = getPosts()
+var posts = []//getPosts()
 
 ---
 <Layout title="Blog">
