--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -21,3 +21,4 @@ var navItems = [
 </aside>
 <script src="https://apis.google.com/js/platform.js"></script>
 <script src="/channels.js" is:inline></script>
+<script src="/sidebar.js" is:inline></script>
