--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,9 +5,26 @@ import Layout from '../layouts/Layout.astro'
 
 import fs from 'fs'
 
-import getPosts from '../getPosts.js'
+import request from 'request'
 
-var posts = []//getPosts()
+var posts = []
+
+request.post(
+  {
+    url: 'https://blogfeed.adarshrkumar.dev/getAllPosts'
+  }, 
+  function(err, res, body) {
+    if (
+      (body.startsWith('[') && body.endsWith(']')) || 
+      (body.startsWith('{') && body.endsWith('}'))
+    ) {
+      body = JSON.parse(body)
+    }
+    if (typeof body === 'object') {
+      posts = body
+    }
+  }
+)
 
 ---
 <Layout title="Blog">
@@ -17,8 +34,8 @@ var posts = []//getPosts()
         <div class="post">
           <img />
           <div class="info">
-            <h3>{post.frontmatter.title}</h3>
-            <p>{post.rawContent}</p>
+            <h3>{post.title}</h3>
+            <p>{post.content}</p>
           </div>
         </div>
       })
