--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,9 +5,7 @@ import Layout from '../layouts/Layout.astro'
 
 import fs from 'fs'
 
-// import { request }  from 'request'
-
-var request = require('request')
+import { request }  from 'request'
 
 var posts = []
 
