--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro'
 
 import fs from 'fs'
 
-import request  from 'node:request'
+import request  from 'request'
 
 var posts = []
 
