--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -32,7 +32,7 @@ request.post(
     {
       posts.map((post) => {
         <div class="post">
-          { post.image ? <img src={ post.image.src }/> : '' }
+          { post.image ? <img src={ post.image.src } alt={post.image.alt} /> : '' }
           <div class="info">
             <h3>{post.title}</h3>
             <p>{post.content}</p>
