create and use `<Script />`.astro

--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/components/nav.scss'
 
-import ThemeSwitcher from '../components/themeSwitcher.astro'
+import Script from '../utils/script.astro'
 
 var { siteDomain, items, direction, varient } = Astro.props
 if (!!varient === false) varient = 'header'
@@ -44,41 +44,4 @@ items.forEach(function(item, i) {
 
 ---
 <nav class="nav" data-direction={direction} data-varient={varient} set:html={buttonsStr}></nav>
-<script is:inline>
-    var largestWidth = 0
-    document.querySelectorAll('.nav-btn').forEach(function(b, i) {
-        if (b.clientWidth > largestWidth) largestWidth = b.clientWidth
-    })
-    document.querySelector('.nav-btn').parentNode.style.setProperty('--min-width', `${largestWidth/16}rem`)
-
-    function goToUrl(btn, target) {
-        var link = btn
-        if (typeof link !== 'string') {
-            link = btn.getAttribute('url')
-            target = btn.getAttribute('target')
-            if (!!target === false) {
-                if (link.includes('://')) target = '_blank'
-            }
-        }
-        if (!!target === false || target == null) target = '_self'
-        if (!!link === false) link = '/'
-        if (target === '_blank') {
-            window.open(link)
-        }
-        else if (target === '_parent') {
-            parent.location.href = link
-        }
-        else if (target === '_top') {
-            top.location.href = link
-        }
-        else if (target.startsWith('_') === false) {
-            document.getElementById(target).src = link
-        }
-        else if (target === '_self') {
-            location.href = link
-        }
-        else {
-            location.href = link
-        }
-    }
-</script>
+<Script name="nav">
