--- a/src/pages/videos.astro
+++ b/src/pages/videos.astro
@@ -3,8 +3,10 @@ import '../styles/grid.scss'
 import '../styles/pages/videos.scss'
 
 import Layout from '../layouts/Layout.astro'
+
+import Script from '../utils/script.astro'
 ---
 <Layout title="Videos">
   <section id="videos" class="grid"></section>
-  <script src="/videos.js" is:inline></script>
+  <Script name="videos" />
 </Layout>
