--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -3,6 +3,8 @@ import '../styles/components/sidebar.scss'
 
 import Nav from './nav.astro'
 
+import Script from '../utils/script.astro'
+
 var navItems = [
     // { name: 'Home' }, 
     { name: 'About' }, 
@@ -20,5 +22,5 @@ var navItems = [
     <Nav items={navItems} direction="column" varient="sidebar" />
 </aside>
 <script src="https://apis.google.com/js/platform.js"></script>
-<script src="/channels.js" is:inline></script>
-<script src="/sidebar.js" is:inline></script>
+<Script name="channels" />
+<Script name="sidebar" />
