--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,7 +54,7 @@ if (className.startsWith(' ')) className = className.substring(1)
       <Sidebar />
     </div>
     <Script name="main" />
-    <!-- <script src="/eruda.js" is:inline></script> -->
+    <script src="/eruda.js" is:inline></script>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
