--- a/src/utils/script.astro
+++ b/src/utils/script.astro
@@ -3,4 +3,4 @@
 var { name } = Astro.props
 
 ---
-<script src={`/script/${name}.js`} is:inline></script>
+<script src={`/scripts/${name}.js`} is:inline></script>
