--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -23,7 +23,7 @@ import Script from '../utils/script.astro'
       <label for="message">
         <b>Message: </b>
       </label>
-      <textarea rows="1" name="message" id="message" placeholder="Type here..." required="TRUE"></textarea>
+      <textarea autosize rows="1" name="message" id="message" placeholder="Type here..." required="TRUE"></textarea>
     </div>
     <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
     <input type="submit" value="Send" class="contact-button" align="right" style="cursor: pointer;">
