--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -3,7 +3,7 @@ $gap: 2rem;
 
 .posts {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax($min-size, 1fr)); /* Old Browsers (no "min()") */
-    grid-template-columns: repeat(auto-fit, minmax(min($min-size, 100%), 1fr)); /* New Browser (yes "min()")*/
+    grid-template-columns: repeat(auto-fill, minmax($min-size, 1fr)); /* Old Browsers (no "min()") */
+    grid-template-columns: repeat(auto-fill, minmax(min($min-size, 100%), 1fr)); /* New Browser (yes "min()")*/
     gap: $gap;
 }
