--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -7,3 +7,7 @@ $gap: 2rem;
     grid-template-columns: repeat(auto-fill, minmax(min($min-size, 100%), 1fr)); /* New Browser (yes "min()")*/
     gap: $gap;
 }
+
+.post {
+    aspect-ratio: 3 / 4;
+}
