--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -16,4 +16,8 @@ $padding: 1rem;
     aspect-ratio: 3 / 4;
 
     background: var(--middle-color);
+
+    display: flex;
+    flex-direction: column;
+    gap: $padding;
 }
