--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -16,6 +16,7 @@ $padding: 1rem;
     aspect-ratio: 3 / 4;
 
     background: var(--middle-color);
+    color: inherit;
 
     display: flex;
     flex-direction: column;
