--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -26,7 +26,7 @@ $padding: 1rem;
 
     text-decoration: inherit;
 
-    &__image {
+    &__img {
         border-radius: #{$gap + $padding*2};
     }
 
